- auto addition of rows/columns when typing on last row/column
- allow deletion of rows without losing meta-data

--- Version 0.2.7 - Sep-02-2004
- several compilation fixes for KDE/Qt < 3.2.x (and maybe some new ones were introduced?)
- slight reorganization of menus
- added menu option to close all editor windows
- some improvements in the editing behavior for the table. Some quirks still present
- renamed windows
- fixed some typos
- set initial minimum sizes for object browser and object viewer windows
- don't show all windows on startup
- ask whether to save current workspace before loading a new one
- added command-line option to set, which components to show debug-messages for
- added option(s) to show/raise watch-window when new commands get displayed
- formula-widget handles multiple table situation correctly
- RKVarselector and RKObjectBrowser use a common base class for the list view
- RKVarselector and dependent widgets get updated when objects get added/removed/modified
- prevent conversion to factors when creating data.frames for now
- variables can be added/removed correctly in the data.frame editor. Those changes are propagated to the RObjectBrowser automatically
- synchronisation from the GUI to the R-workspace is done immediately
- added ability to spawn separate command-editor window(s) with load/save/print/etc.
- command-editor part in the watch-window keeps keyboard focus (most of the time)

--- Version 0.2.6a - Aug-30-2004
- synchronize edited objects before "View"ing them
- fix small typo
- quick-and-dirty fix for problem with objects in a new table (e.g. "my.data") never getting synced

--- Version 0.2.6 - Aug-29-2004
- added error-handling to workspace saving
- ask whether to save workspace on application quit
- added menu-entries to clear output-window and watch-log
- don't duplicate menu-entries when plugins get re-scanned
- place "Analyse"-menu left of help-menu