@@ -37,3 +37,7 @@
 	object <- deparse (substitute (x))
 	.rk.do.call (paste ("sync\t", object, "\n", sep=""))
 }
+
+"rk.get.tempfile.name" <- function (prefix="image", extension=".jpg") {
+	return (.rk.do.call (paste ("get.tempfile.name\t", prefix, "\t", extension, "\n", sep="")))
+}
